# COEN-6331-Project

./: README.md
HDC/: hdc  hdc.cpp  hdcLib.dylib
LeNet5/: .gitignore  dylibTest.ipynb  full-lenet-diagram  hdc-lenet-diagram  hdcpy.ipynb  lenet5-2048.ipynb  lenet5-2048.pth  lenet5-400.pth  lenet5.ipynb  lenet5.pth  main.py  misc-figures.ipynb  pdftotxt.ipynb  pyproject.toml  rnn_torchviz  test.py
LeNet5/dataset/: __init__.py
LeNet5/lenet5/: nn.py
LeNet5/utils/: __init__.py
